--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
-dotenv = "0.15.0"
+dotenvy = "0.15.6"
 humansize = "2.1.2"
 poise = { git = "https://github.com/kangalioo/poise.git", version = "0.4.1" }
+rustbreak = { version = "2.0.0", features = ["ron_enc"], default-features = false }
+serde = { version = "1.0.147", features = ["derive"] }
 sysinfo = "0.26.7"
 tokio = { version = "1.21.2", features = ["rt-multi-thread", "sync"] }
 tracing = "0.1.37"
