Drop GECKODRIVER_CMDLINE

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ GUILD_ID=
 REGISTRO_ID=
 LOG_CHANNEL_ID=
 DATABASE_LOCATION=
-GECKODRIVER_ADDRESS=
-GECKODRIVER_CMDLINE=
+# geckodriver -p 4444
+GECKODRIVER_ADDRESS=http://localhost:4444
