--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ sysinfo = "0.26.7"
 tokio = { version = "1.21.2", features = ["rt-multi-thread", "sync", "process"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
-songbird = { version = "0.3.0", features = ["builtin-queue"] }
+songbird = { version = "0.3.0", features = ["builtin-queue", "yt-dlp"] }
 typemap_rev = "0.1.3"
