--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,5 @@ tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 songbird = { version = "0.3.0", features = ["builtin-queue", "yt-dlp"] }
 typemap_rev = "0.1.3"
+signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
+signal-hook = "0.3.14"
